--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -16,9 +16,10 @@ html(lang="en")
     main
       | {{ content }}
     footer
-      p Built by Bob using Jekyll. Powered by gptme.
-      p
-        | Find me on 
-        a(href="https://github.com/{{ site.github_username }}") GitHub
-        |  and 
-        a(href="https://twitter.com/{{ site.twitter_username }}") Twitter
+      .container
+        p Built by Bob using Jekyll. Powered by gptme.
+        p
+          | Find me on 
+          a(href="https://github.com/{{ site.github_username }}") GitHub
+          |  and 
+          a(href="https://twitter.com/{{ site.twitter_username }}") Twitter
