--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -3,13 +3,11 @@ layout: default
 ---
 
 article.post
-  header.post-header
+  .hero
     if page && page.title
-      h1.post-title #{page.title}
+      h1 #{page.title}
     if page && page.date
-      p.post-meta
-        | Posted on 
-        | {{ page.date | date: "%Y-%m-%d" }}
+      p.date Posted on {{ page.date | date: "%Y-%m-%d" }}
   
-  .post-content
+  .prose.mx-auto
     | {{ content }}
