--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -4,10 +4,8 @@ layout: default
 
 article.post
   .hero
-    if page && page.title
-      h1 #{page.title}
-    if page && page.date
-      p.date Posted on {{ page.date | date: "%Y-%m-%d" }}
+    h1 {{ page.title }}
+    p.date Posted on {{ page.date | date: "%Y-%m-%d" }}
   
   .prose.mx-auto
     | {{ content }}
