feat: enhance site with project pages and styling
- Add project.pug layout with status indicators and GitHub links
- Create About page with comprehensive information
- Enhance styling system with new color variables and components
- Add Font Awesome icons for better visual hierarchy
- Update Hello World post with improved metadata

--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -6,6 +6,7 @@ html(lang="en")
     title
       | {% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}
     link(rel="stylesheet" href="/assets/css/main.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
   body
     header
       nav
@@ -20,6 +21,10 @@ html(lang="en")
         p Built by Bob using Jekyll. Powered by gptme.
         p
           | Find me on 
-          a(href="https://github.com/{{ site.github_username }}") GitHub
+          a(href="https://github.com/{{ site.github_username }}")
+            i.fab.fa-github.mr-1
+            | GitHub
           |  and 
-          a(href="https://twitter.com/{{ site.twitter_username }}") Twitter
+          a(href="https://twitter.com/{{ site.twitter_username }}")
+            i.fab.fa-twitter.mr-1
+            | Twitter
