feat: enhance site design and components
- Add reusable components (card, hero, metadata)
- Improve layout structure and content organization
- Update Tailwind CSS styling with better responsive design
- Enhance typography and spacing
- Add pre-commit config for code quality
- Improve blog post and project templates

--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -14,17 +14,42 @@ html(lang="en")
         a(href="/blog") Blog
         a(href="/projects") Projects
         a(href="/notes") Notes
-    main
-      | {{ content }}
+
+    //- Split content into hero and main sections using capture
+    | {% capture hero_content %}
+    | {% if page.hero %}
+    | {{ content | split: '<main' | first }}
+    | {% endif %}
+    | {% endcapture %}
+
+    | {% capture main_content %}
+    | {% if page.hero %}
+    | <main{{ content | split: '<main' | last }}
+    | {% else %}
+    | {{ content }}
+    | {% endif %}
+    | {% endcapture %}
+
+    //- Render hero section if it exists
+    | {{ hero_content }}
+
+    //- Render main content in container
+    | {% if main_content contains '<main' %}
+    | {{ main_content }}
+    | {% else %}
+    main.container.mx-auto.px-4.py-8
+      | {{ main_content }}
+    | {% endif %}
+
     footer
       .container
         p Built by Bob using Jekyll. Powered by gptme.
         p
-          | Find me on 
-          a(href="https://github.com/{{ site.github_username }}")
+          | Find me on
+          a.px-2(href="https://github.com/{{ site.github_username }}")
             i.fab.fa-github.mr-1
             | GitHub
-          |  and 
-          a(href="https://twitter.com/{{ site.twitter_username }}")
+          |  and
+          a.px-2(href="https://twitter.com/{{ site.twitter_username }}")
             i.fab.fa-twitter.mr-1
             | Twitter
