--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -1,11 +1,55 @@
 ---
 layout: default
+hero: true
 ---
 
 article.post
-  .hero
-    h1 {{ page.title }}
-    p.date Posted on {{ page.date | date: "%Y-%m-%d" }}
-  
-  .prose.mx-auto
-    | {{ content }}
+  | {% assign reading_time = content | number_of_words | divided_by: 200 | plus: 1 | append: " min read" %}
+  | {% assign formatted_date = page.date | date: "%B %d, %Y" %}
+  | {% include hero.pug
+  |   title=page.title
+  |   excerpt=page.excerpt
+  |   description=page.description
+  |   date=formatted_date
+  |   author=page.author
+  |   tags=page.tags
+  |   reading_time=reading_time
+  | %}
+
+  main.container.mx-auto.px-4.py-8
+    .prose.mx-auto
+      | {{ content }}
+
+      .post-footer.mt-12.pt-6.border-t.border-border
+        | {% if page.author %}
+        .author.text-sm
+          | Written by {{ page.author }}
+        | {% endif %}
+
+        .share.mt-4
+          p.text-sm.mb-2 Share this post:
+          .social-links
+            a(href="https://twitter.com/intent/tweet?text={{ page.title | url_encode }}&url={{ site.url }}{{ page.url }}" target="_blank" rel="noopener")
+              i.fab.fa-twitter
+              span Tweet
+            a(href="https://github.com/{{ site.github_username }}" target="_blank" rel="noopener")
+              i.fab.fa-github
+              span View on GitHub
+
+        | {% if page.previous or page.next %}
+        nav.post-nav
+          | {% if page.previous %}
+          a.prev(href="{{ page.previous.url }}")
+            span.label
+              i.fas.fa-arrow-left
+              | Previous Post
+            span.title {{ page.previous.title }}
+          | {% endif %}
+          | {% if page.next %}
+          a.next(href="{{ page.next.url }}")
+            span.label
+              | Next Post
+              i.fas.fa-arrow-right
+            span.title {{ page.next.title }}
+          | {% endif %}
+        | {% endif %}
