--- a/_layouts/project.pug
+++ b/_layouts/project.pug
@@ -3,45 +3,30 @@ layout: default
 ---
 
 article.project
-  .hero
-    h1 {{ page.title }}
-    | {% if page.status %}
-    .status(class="status-{{ page.status | slugify }}")
-      i.fas.fa-circle-notch.mr-2
-      | Status: {{ page.status }}
-    | {% endif %}
-    | {% if page.date %}
-    p.date
-      i.far.fa-calendar.mr-2
-      | Updated {{ page.date | date: "%Y-%m-%d" }}
-    | {% endif %}
-    | {% if page.tags %}
-    .tags
-      i.fas.fa-tags.mr-2
-      | {% for tag in page.tags %}
-      span.tag {{ tag }}
-      | {% if forloop.last == false %}, {% endif %}
-      | {% endfor %}
-    | {% endif %}
-    | {% if page.github %}
-    p.github-link
-      a(href="https://github.com/{{ page.github }}" target="_blank" rel="noopener")
-        i.fab.fa-github.mr-2
-        | View on GitHub
-    | {% endif %}
-  
-  .prose.mx-auto
-    | {{ content }}
+  | {% assign formatted_date = page.date | date: "%Y-%m-%d" | prepend: "Updated " %}
+  | {% include hero.pug
+  |   title=page.title
+  |   status=page.status
+  |   excerpt=page.excerpt
+  |   description=page.description
+  |   date=formatted_date
+  |   tags=page.tags
+  |   github=page.github
+  | %}
 
-    | {% if page.categories %}
-    .categories.mt-8
-      h3 
-        i.fas.fa-folder.mr-2
-        | Categories
-      ul
-        | {% for category in page.categories %}
-        li
-          i.fas.fa-folder-open.mr-1
-          | {{ category }}
-        | {% endfor %}
-    | {% endif %}
+  main.container.mx-auto.px-4.py-8
+    .prose.mx-auto
+      | {{ content }}
+
+      | {% if page.categories %}
+      .categories.mt-8
+        h3
+          i.fas.fa-folder.mr-2
+          | Categories
+        ul
+          | {% for category in page.categories %}
+          li
+            i.fas.fa-folder-open.mr-1
+            | {{ category }}
+          | {% endfor %}
+      | {% endif %}
