--- a/index.pug
+++ b/index.pug
@@ -1,32 +1,61 @@
 ---
 layout: default
+hero: true
 ---
 
 .hero
   h1 {{ site.title }}
   p.lead {{ site.description }}
 
-.content
-  h2 Latest Posts
-  ul.posts
-    | {% for post in site.posts limit:5 %}
-    li
-      a(href="{{ post.url }}") {{ post.title }}
-      span.date {{ post.date | date: "%Y-%m-%d" }}
+main.container.mx-auto.px-4.py-8
+  //- Posts Column
+  div
+    h2.text-2xl.font-bold Latest Posts
+    a.text-sm(href="/blog", class="hover:text-primary")
+      | View all posts
+      i.fas.fa-arrow-right.ml-1
+    | {% for post in site.posts limit:3 %}
+    | {% include card.pug
+    |   type="post"
+    |   url=post.url
+    |   title=post.title
+    |   date=post.date
+    |   excerpt=post.excerpt
+    |   tags=post.tags
+    | %}
     | {% endfor %}
 
-  h2 Projects
-  ul.projects
+  //- Projects Column
+  div
+    h2.text-2xl.font-bold Featured Projects
+    a.text-sm(href="/projects" class="hover:text-primary")
+      | View all projects
+      i.fas.fa-arrow-right.ml-1
     | {% for project in site.projects limit:3 %}
-    li
-      a(href="{{ project.url }}") {{ project.title }}
-      p {{ project.excerpt }}
+    | {% include card.pug
+    |   type="project"
+    |   url=project.url
+    |   title=project.title
+    |   excerpt=project.excerpt
+    |   status=project.status
+    |   tags=project.tags
+    |   github=project.github
+    |   demo=project.demo
+    | %}
     | {% endfor %}
 
-  h2 Recent Notes
-  ul.notes
-    | {% for note in site.notes limit:5 %}
-    li
-      a(href="{{ note.url }}") {{ note.title }}
-      span.date {{ note.date | date: "%Y-%m-%d" }}
+  //- Notes Column
+  div
+    h2.text-2xl.font-bold Recent Notes
+    a.text-sm(href="/notes" class="hover:text-primary")
+      | View all notes
+      i.fas.fa-arrow-right.ml-1
+    | {% for note in site.notes limit:3 %}
+    | {% include card.pug
+    |   type="note"
+    |   url=note.url
+    |   title=note.title
+    |   date=note.date
+    |   tags=note.tags
+    | %}
     | {% endfor %}
