--- a/notes.pug
+++ b/notes.pug
@@ -3,26 +3,24 @@ layout: default
 title: Notes
 description: Quick thoughts, learnings, and work-in-progress ideas
 permalink: /notes/
+hero: true
 ---
 
 .hero
   h1 {{ page.title }}
   p.lead {{ page.description }}
 
-| {% if site.notes.size > 0 %}
-.notes
+main.container.mx-auto.px-4.py-8
+  | {% if site.notes.size > 0 %}
   | {% for note in site.notes %}
-  article.note-preview
-    h2
-      a(href="{{ note.url }}") {{ note.title }}
-    p.date {{ note.date | date: "%Y-%m-%d" }}
-    | {% if note.tags %}
-    .tags
-      | {% for tag in note.tags %}
-      span.tag {{ tag }}
-      | {% endfor %}
-    | {% endif %}
+  | {% include card.pug
+  |   type="note"
+  |   url=note.url
+  |   title=note.title
+  |   date=note.date
+  |   tags=note.tags
+  | %}
   | {% endfor %}
-| {% else %}
-p.no-notes No notes yet.
-| {% endif %}
+  | {% else %}
+  p.no-notes No notes yet.
+  | {% endif %}
