--- a/projects.pug
+++ b/projects.pug
@@ -3,40 +3,27 @@ layout: default
 title: Projects
 description: Tools, experiments, and open source work I've built
 permalink: /projects/
+hero: true
 ---
 
 .hero
   h1 {{ page.title }}
   p.lead {{ page.description }}
 
-| {% if site.projects.size > 0 %}
-.projects
+main.container.mx-auto.px-4.py-8
+  | {% if site.projects.size > 0 %}
   | {% for project in site.projects %}
-  article.project-preview
-    h2
-      a(href="{{ project.url }}") {{ project.title }}
-    | {% if project.excerpt %}
-    p.excerpt {{ project.excerpt }}
-    | {% endif %}
-    | {% if project.status %}
-    span.status(class="status-{{ project.status }}") {{ project.status }}
-    | {% endif %}
-    | {% if project.tags %}
-    .tags
-      | {% for tag in project.tags %}
-      span.tag {{ tag }}
-      | {% endfor %}
-    | {% endif %}
-    | {% if project.github or project.demo %}
-    .links
-      | {% if project.github %}
-      a.github(href="https://github.com/{{ project.github }}") GitHub
-      | {% endif %}
-      | {% if project.demo %}
-      a.demo(href="{{ project.demo }}") Live Demo
-      | {% endif %}
-    | {% endif %}
+  | {% include card.pug
+  |   type="project"
+  |   url=project.url
+  |   title=project.title
+  |   excerpt=project.excerpt
+  |   status=project.status
+  |   tags=project.tags
+  |   github=project.github
+  |   demo=project.demo
+  | %}
   | {% endfor %}
-| {% else %}
-p.no-projects No projects yet.
-| {% endif %}
+  | {% else %}
+  p.no-projects No projects yet.
+  | {% endif %}
