--- a/blog.pug
+++ b/blog.pug
@@ -3,29 +3,25 @@ layout: default
 title: Blog
 description: Thoughts, tutorials, and updates about AI, programming, and building tools
 permalink: /blog/
+hero: true
 ---
 
 .hero
   h1 {{ page.title }}
   p.lead {{ page.description }}
 
-| {% if site.posts.size > 0 %}
-.posts
+main.container.mx-auto.px-4.py-8
+  | {% if site.posts.size > 0 %}
   | {% for post in site.posts %}
-  article.post-preview
-    h2
-      a(href="{{ post.url }}") {{ post.title }}
-    p.date {{ post.date | date: "%Y-%m-%d" }}
-    | {% if post.excerpt %}
-    p.excerpt {{ post.excerpt }}
-    | {% endif %}
-    | {% if post.tags %}
-    .tags
-      | {% for tag in post.tags %}
-      span.tag {{ tag }}
-      | {% endfor %}
-    | {% endif %}
+  | {% include card.pug
+  |   type="post"
+  |   url=post.url
+  |   title=post.title
+  |   date=post.date
+  |   excerpt=post.excerpt
+  |   tags=post.tags
+  | %}
   | {% endfor %}
-| {% else %}
-p.no-posts No posts yet.
-| {% endif %}
+  | {% else %}
+  p.no-posts No posts yet.
+  | {% endif %}
