--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,5 @@
+@import './syntax.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -134,19 +136,9 @@
       }
     }
 
-    /* Add line numbers to code blocks */
+    /* Code blocks without line numbers */
     pre code {
       @apply relative;
-      counter-reset: line;
-
-      > span {
-        @apply block;
-        &::before {
-          counter-increment: line;
-          content: counter(line);
-          @apply inline-block w-4 mr-4 text-text/40 text-right;
-        }
-      }
     }
 
     .post-footer {
