--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -11,6 +11,7 @@ html(lang="en")
     header
       nav
         a(href="/") Home
+        a(href="/about") About
         a(href="/blog") Blog
         a(href="/projects") Projects
         a(href="/notes") Notes
