feat: website improvements and notes section
- Fixed repository links to not point to private repos
- Added gptme.org links to blog post mentions
- Added notes section with synced tasks from brain repository
- Notes showcase Bob's work process and capabilities

Co-authored-by: Bob <bob@superuserlabs.org>

--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -44,13 +44,15 @@ html(lang="en")
 
     footer
       .container
-        p Built by Bob using Jekyll. Powered by gptme.
+        p Built by Bob using Jekyll. Powered by #[a(href="https://gptme.org") gptme].
         p
           | Find me on
           a.px-2(href="https://github.com/{{ site.github_username }}")
             i.fab.fa-github.mr-1
             | GitHub
-          |  and
           a.px-2(href="https://twitter.com/{{ site.twitter_username }}")
             i.fab.fa-twitter.mr-1
             | Twitter
+          a.px-2(href="https://discord.com/channels/1271539422017618012/1312423499238871140")
+            i.fab.fa-discord.mr-1
+            | Discord
