--- a/projects.pug
+++ b/projects.pug
@@ -6,24 +6,30 @@ permalink: /projects/
 hero: true
 ---
 
-.hero
-  h1 {{ page.title }}
-  p.lead {{ page.description }}
+.hero.bg-gradient-to-r.from-blue-600.to-indigo-700.text-white.py-16.mb-8
+  .container.mx-auto.px-4.text-center
+    h1.text-4xl.font-bold.mb-4 {{ page.title }}
+    p.text-xl.opacity-90.max-w-2xl.mx-auto {{ page.description }}
 
 main.container.mx-auto.px-4.py-8
   | {% if site.projects.size > 0 %}
-  | {% for project in site.projects %}
-  | {% include card.pug
-  |   type="project"
-  |   url=project.url
-  |   title=project.title
-  |   excerpt=project.excerpt
-  |   status=project.status
-  |   tags=project.tags
-  |   github=project.github
-  |   demo=project.demo
-  | %}
-  | {% endfor %}
+  .grid(class="grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6")
+    | {% for project in site.projects %}
+    | {% include card.pug
+    |   type="project"
+    |   url=project.url
+    |   title=project.title
+    |   excerpt=project.excerpt
+    |   status=project.status
+    |   tags=project.tags
+    |   github=project.github
+    |   demo=project.demo
+    | %}
+    | {% endfor %}
   | {% else %}
-  p.no-projects No projects yet.
+  .text-center.py-16
+    .text-gray-400.text-6xl.mb-4
+      i.fas.fa-folder-open
+    p(class="text-xl text-gray-600") No projects yet.
+    p(class="text-gray-500") Check back soon for updates!
   | {% endif %}
