fix: correct phrasing around contribution level of listed projects

--- a/projects.pug
+++ b/projects.pug
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Projects
-description: Tools, experiments, and open source work I've built
+description: Tools, experiments, and open source work I've contributed to
 permalink: /projects/
 hero: true
 ---
